Add Yunli (Honkai)
Squash yunli

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -511,6 +511,7 @@
 		<Content Remove="Assets\Games\Honkai\Images\Characters\xueyi.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\yanqing.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\yukong.webp" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\yunli.webp" />
 		<Content Remove="Assets\Games\Honkai\weapons.json" />
 		<Content Remove="Assets\Games\WuWa\characters.json" />
 		<Content Remove="Assets\Games\WuWa\elements.json" />
