--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -487,6 +487,7 @@
 		<Content Remove="Assets\Games\Honkai\Images\Characters\hook.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\huohuo.png" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\jade.webp" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\jiaoqiu.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\jingliu.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\jingyuan.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\kafka.webp" />
