Add Feixiao (Honkai)

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -477,6 +477,7 @@
 		<Content Remove="Assets\Games\Honkai\Images\Characters\dangheng.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\DHIL.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\drratio.webp" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\feixiao.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\firefly.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\fuxuan.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\gepard.webp" />
