Add Lingsha (Honkai)

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -492,6 +492,7 @@
 		<Content Remove="Assets\Games\Honkai\Images\Characters\jingliu.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\jingyuan.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\kafka.webp" />
+		<Content Remove="Assets\Games\Honkai\Images\Characters\lingsha.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\luka.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\luocha.webp" />
 		<Content Remove="Assets\Games\Honkai\Images\Characters\lynx.webp" />
