Added Zhezhi and Xiangliyao

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -520,9 +520,11 @@
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Sanhua.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Taoqi.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Verina.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Xiangliyao.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Yangyang.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Yinlin.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Yuanwu.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Zhezhi.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Start_Game.png" />
 		<Content Remove="Assets\Games\WuWa\npcs.json" />
 		<Content Remove="Assets\Games\WuWa\objects.json" />
