Added simple command line support for directly starting JASM for specific game

--- a/src/GIMI-ModManager.WinUI/Properties/launchsettings.json
+++ b/src/GIMI-ModManager.WinUI/Properties/launchsettings.json
@@ -1,10 +1,11 @@
-﻿{
-    "profiles": {
-      "GIMI-ModManager.WinUI (Unpackaged)": {
-        "commandName": "Project"
-      }
-      //"GIMI-ModManager.WinUI (Package)": {
-      //  "commandName": "MsixPackage"
-      //}
+{
+  "profiles": {
+    "GIMI-ModManager.WinUI (Unpackaged)": {
+      "commandName": "Project"
+    },
+    "JASM Start ZZZ": {
+      "commandName": "Project",
+      "commandLineArgs": "--game zzz --switch"
     }
+  }
 }
