--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -4,7 +4,16 @@ indent_style = tab
 indent_size = tab
 tab_width = 4
 
-[*.{asax,ascx,aspx,axaml,cs,cshtml,htm,html,master,paml,razor,skin,vb,xaml,xamlx,xoml}]
+[*.{asax,ascx,aspx,axaml,cs,cshtml,htm,html,master,paml,razor,skin,vb}]
+indent_style = space
+indent_size = 4
+tab_width = 4
+end_of_line = crlf
+insert_final_newline = false
+trim_trailing_whitespace = true
+max_line_length=160
+
+[*.{xaml,xamlx,xoml}]
 indent_style = space
 indent_size = 4
 tab_width = 4
