--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -544,6 +544,7 @@
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Xiangliyao.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Yangyang.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Yinlin.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\YouHu.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Yuanwu.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Zhezhi.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Start_Game.png" />
