chore(WuWa): Added Shorekeeper and Youhu (#267)
* add shorekeeper and correct some text errors

* add YOUHU

* reverted formatting changes

* adjust image

* Rename

Signed-off-by: vagmr <2737165206@qq.com>

---------

Signed-off-by: vagmr <2737165206@qq.com>

--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -538,11 +538,13 @@
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Mortefi.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Rover.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Sanhua.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Shorekeeper.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Taoqi.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Verina.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Xiangliyao.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Yangyang.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Yinlin.png" />
+		<Content Remove="Assets\Games\WuWa\Images\Characters\Youhu.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Yuanwu.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Characters\Zhezhi.png" />
 		<Content Remove="Assets\Games\WuWa\Images\Start_Game.png" />
