--- a/src/JASM.AutoUpdater/JASM.AutoUpdater.csproj
+++ b/src/JASM.AutoUpdater/JASM.AutoUpdater.csproj
@@ -10,11 +10,12 @@
     <PublishProfile>win10-$(Platform).pubxml</PublishProfile>
 	<WindowsSdkPackageVersion>10.0.22621.38</WindowsSdkPackageVersion>
     <UseWinUI>true</UseWinUI>
-		<Nullable>enable</Nullable>
-	  <EnableMsixTooling>true</EnableMsixTooling>
-	  <WindowsPackageType>None</WindowsPackageType>
-	  <Title>JASM - Auto Updater</Title>
-	  <AssemblyName>JASM - Auto Updater</AssemblyName>
+	<Nullable>enable</Nullable>
+	<EnableMsixTooling>true</EnableMsixTooling>
+	<WindowsPackageType>None</WindowsPackageType>
+	<Title>JASM - Auto Updater</Title>
+	<AssemblyName>JASM - Auto Updater</AssemblyName>
+	<CsWinRTAotOptimizerEnabled>false</CsWinRTAotOptimizerEnabled>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Assets\7z\7-zip.dll" />
@@ -28,19 +29,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.1" />
-    <PackageReference Include="CommunityToolkit.WinUI.Controls.Segmented" Version="8.1.240821" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+    <PackageReference Include="CommunityToolkit.WinUI.Controls.Segmented" Version="8.1.240916" />
     <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.106">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.240829007" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.240923002" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Serilog" Version="4.0.1" />
+    <PackageReference Include="Serilog" Version="4.0.2" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
-    <PackageReference Include="WinUIEx" Version="2.4.0" />
+    <PackageReference Include="WinUIEx" Version="2.4.2" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
