--- a/src/CommunityToolkitWrapper/CommunityToolkitWrapper.csproj
+++ b/src/CommunityToolkitWrapper/CommunityToolkitWrapper.csproj
@@ -7,6 +7,7 @@
     <UseWinUI>true</UseWinUI>
 	<EnablePreviewMsixTooling>true</EnablePreviewMsixTooling>
 	<GenerateLibraryLayout>true</GenerateLibraryLayout>
+    <Platforms>x86;x64;arm64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
