--- a/src/CommunityToolkitWrapper/CommunityToolkitWrapper.csproj
+++ b/src/CommunityToolkitWrapper/CommunityToolkitWrapper.csproj
@@ -12,5 +12,6 @@
 
   <ItemGroup>
       <PackageReference Include="CommunityToolkit.WinUI.Extensions" Version="8.1.240916" />
+      <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.250205002" />
   </ItemGroup>
 </Project>
